@@ -1,0 +1,11 @@
+prefix=@FF_PREFIX@
+sdkdir=@SDKDIR@
+includedir=@INCDIR@
+
+Name: NSPR
+Description: The Netscape Portable Runtime
+Version: @XUL_VERSION@
+Libs: -L${sdkdir}/lib -lplds4 -lplc4 -lnspr4 -lpthread -ldl
+Cflags: -I${includedir}/nspr
+
+
